<resources>
    <string name="app_name">VideoPlayer</string>
    <string name="url">URL</string>
    <string name="download">Download</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="error">Произошла ошибка!</string>
    <string name="cancel_download">Cancel</string>
    <string name="notification_title">Downloading…</string>
    <string name="channel_name">Download</string>
    <string name="progress_label">Downloading progress…</string>
    <string name="preference_file_key">DOWNLOADED_FILES</string>
    <string name="file_already_downloaded">File already downloaded</string>
    <string name="file_downloaded">File downloaded</string>
    <string name="video_url" translatable="false">http://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
</resources>