<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.zebannikolay.videoplayer.presentation.PlayerViewModel" />
        <import type="android.view.View"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.PlayerFragment">

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/player"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:controller_layout_id="@layout/playback_control"
                app:layout_constraintDimensionRatio="h,16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:show_timeout="-1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@={vm.url}" />
            </com.google.android.material.textfield.TextInputLayout>

            <ToggleButton
                android:id="@+id/play_pause_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:checked="@={vm.playWhenReady}"
                android:textOff="@string/play"
                android:textOn="@string/pause"
                app:layout_constraintEnd_toStartOf="@+id/download_button"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/download_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:enabled="@{!vm.isDownloading}"
                android:onClick="@{() -> vm.onDownloadClicked()}"
                android:text="@string/download"
                app:layout_constraintBottom_toBottomOf="@+id/play_pause_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/play_pause_button"
                app:layout_constraintTop_toTopOf="@+id/play_pause_button" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{vm.isDownloading ? View.VISIBLE : View.GONE}"
                app:constraint_referenced_ids="progress_label,progress_bar" />

            <TextView
                android:id="@+id/progress_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/progress_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/download_button" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:progress="@{vm.progress}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progress_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>